--- a/CTFd/plugins/docker_challenges/assets/create.html
+++ b/CTFd/plugins/docker_challenges/assets/create.html
@@ -7,6 +7,17 @@
             The category of your challenge
         </small>
     </label>
+	<br>
+    {% for cat in categories %}
+        <button 
+            class="btn btn-outline-info" 
+            style="padding: .25rem .5rem; font-size: .875rem; line-height: 1.5; border-radius: .2rem; margin-bottom: 8px;" 
+            type="button" 
+            onclick="selectCategoryOption('{{ cat }}')" 
+            value="{{ cat }}">
+            {{ cat }}
+        </button>
+    {% endfor %}
     <input type="text" class="form-control" name="category" placeholder="Enter challenge category">
 </div>
 <div class="form-group">
