--- a/CTFd/plugins/docker_challenges/assets/view.html
+++ b/CTFd/plugins/docker_challenges/assets/view.html
@@ -2,6 +2,9 @@
 {% block description %}
 
 <style>
+    #docker_container pre {
+        color: #c9c9c9;
+    }
     code {
         background-color: #d4d4d4;
         color: #00B9BC !important;
